added related person observations

--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -111,6 +111,9 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+        <action
+            android:id="@+id/navigate_to_child"
+            app:destination="@id/childFragment" />
     </fragment>
     <fragment
         android:id="@+id/newBornFragment"
@@ -159,6 +162,18 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/childFragment"
+        android:name="com.intellisoft.nndak.screens.children.ChildFragment"
+        android:label="fragment_child"
+        tools:layout="@layout/fragment_child">
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
+        <action
+            android:id="@+id/navigate_to_screening"
+            app:destination="@id/screenerEncounterFragment" />
     </fragment>
 
 </navigation>
