--- a/app/src/main/res/layout/patient_details_layout.xml
+++ b/app/src/main/res/layout/patient_details_layout.xml
@@ -1,23 +1,22 @@
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
->
-  <com.google.android.material.card.MaterialCardView
-        android:layout_margin="10dp"
+    android:orientation="vertical">
+
+    <com.google.android.material.card.MaterialCardView
         style="@style/Base.CardView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-    >
-  <androidx.recyclerview.widget.RecyclerView
-            android:layout_margin="1dp"
+        android:layout_margin="10dp">
+
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/patient_details"
-            app:layoutManager="LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-        />
-  </com.google.android.material.card.MaterialCardView>
+            android:layout_margin="1dp"
+            app:layoutManager="LinearLayoutManager" />
+    </com.google.android.material.card.MaterialCardView>
+
 </LinearLayout>
