--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -86,6 +86,7 @@
         android:name="com.intellisoft.nndak.screens.patients.EditPatientFragment"
         android:label="Edit Patient"
         tools:layout="@layout/add_patient_fragment">
+
         <argument
             android:name="patient_id"
             app:argType="string" />
@@ -174,6 +175,18 @@
         <action
             android:id="@+id/navigate_to_screening"
             app:destination="@id/screenerEncounterFragment" />
+
+        <action
+            android:id="@+id/navigate_to_edit_patient"
+            app:destination="@id/editChildFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editChildFragment"
+        android:name="com.intellisoft.nndak.screens.children.EditChildFragment"
+        android:label="EditChildFragment">
+        <argument
+            android:name="patient_id"
+            app:argType="string" />
     </fragment>
 
 </navigation>
