--- a/app/src/main/res/layout/patient_details_header.xml
+++ b/app/src/main/res/layout/patient_details_header.xml
@@ -63,27 +63,16 @@
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/app_registration"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:visibility="gone">
 
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/screener"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:layout_weight="1"
-                android:visibility="gone"
-                android:drawableStart="@drawable/ic_baseline_add_24"
-                android:drawablePadding="2dp"
-                android:paddingStart="2dp"
-                android:text="@string/complete_survey"
-                android:textAppearance="?attr/textAppearanceBody2" />
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/maternity"
                 android:layout_width="0dp"
-                android:visibility="gone"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
                 android:layout_weight="1"
@@ -92,6 +81,19 @@
                 android:paddingStart="2dp"
                 android:text="@string/action_maternity"
                 android:textAppearance="?attr/textAppearanceBody2" />
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/screener"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:drawableStart="@drawable/ic_baseline_add_24"
+                android:drawablePadding="2dp"
+                android:paddingStart="2dp"
+                android:text="@string/action_new_born"
+                android:textAppearance="?attr/textAppearanceBody2" />
+
         </LinearLayout>
     </LinearLayout>
 </FrameLayout>
