--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -127,6 +127,9 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+        <action
+            android:id="@+id/navigate_to_child"
+            app:destination="@id/childFragment" />
     </fragment>
     <fragment
         android:id="@+id/postNatalFragment"
