--- a/app/src/main/res/layout/fragment_patient_list.xml
+++ b/app/src/main/res/layout/fragment_patient_list.xml
@@ -5,14 +5,31 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_margin="10dp"
         android:id="@+id/frameLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <LinearLayout
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/mySpinner"
+                android:layout_width="match_parent"
+                android:spinnerMode="dialog"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+
+
         <androidx.appcompat.widget.SearchView
+            android:layout_marginTop="10dp"
             app:queryBackground="@android:color/transparent"
-            android:layout_margin="10dp"
             android:background="@drawable/search_round"
             android:id="@+id/search"
             android:layout_width="match_parent"
