--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -65,7 +65,7 @@
             android:name="patient_id"
             app:argType="string" />
         <argument
-            android:name="quastion"
+            android:name="question"
             app:argType="string" />
         <argument
             android:name="title"
