--- a/app/src/main/res/navigation/reference_nav_graph.xml
+++ b/app/src/main/res/navigation/reference_nav_graph.xml
@@ -19,6 +19,7 @@
         <argument
             android:name="step"
             app:argType="string" />
+
         <action
             android:id="@+id/action_patient_list_to_screenerEncounterFragment"
             app:destination="@id/screenerEncounterFragment" />
@@ -52,6 +53,9 @@
             app:destination="@id/screenerEncounterFragment" />
         <argument
             android:name="patient_id"
+            app:argType="string" />
+        <argument
+            android:name="code"
             app:argType="string" />
 
     </fragment>
@@ -145,8 +149,14 @@
         <action
             android:id="@+id/navigate_to_screening"
             app:destination="@id/screenerEncounterFragment" />
+        <action
+            android:id="@+id/navigate_to_child"
+            app:destination="@id/childFragment" />
         <argument
             android:name="patient_id"
+            app:argType="string" />
+        <argument
+            android:name="code"
             app:argType="string" />
     </fragment>
     <fragment
@@ -160,6 +170,9 @@
         <argument
             android:name="patient_id"
             app:argType="string" />
+        <argument
+            android:name="code"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/assessmentFragment"
@@ -171,6 +184,9 @@
             app:destination="@id/screenerEncounterFragment" />
         <argument
             android:name="patient_id"
+            app:argType="string" />
+        <argument
+            android:name="code"
             app:argType="string" />
     </fragment>
     <fragment
