--- a/app/src/main/res/layout/bottom_sheet_assessment.xml
+++ b/app/src/main/res/layout/bottom_sheet_assessment.xml
@@ -190,6 +190,7 @@
                     android:drawableStart="@drawable/ic_baseline_add_24"
                     android:drawablePadding="2dp"
                     android:paddingStart="2dp"
+                    android:visibility="gone"
                     android:text="@string/action_assess_child"
                     android:textAppearance="?attr/textAppearanceBody2"
                     app:cornerRadius="@dimen/_35dp" />
