--- a/app/src/main/res/layout/bottom_sheet_assessment.xml
+++ b/app/src/main/res/layout/bottom_sheet_assessment.xml
@@ -64,7 +64,7 @@
                             android:layout_height="60dp"
                             android:background="@drawable/round_basic_button"
                             android:padding="10dp"
-                            android:src="@drawable/behavior"
+                            android:src="@drawable/prescription"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toEndOf="@+id/img_needs"
@@ -77,7 +77,7 @@
                             android:layout_height="60dp"
                             android:background="@drawable/round_basic_button"
                             android:padding="10dp"
-                            android:src="@drawable/behavior"
+                            android:src="@drawable/feed"
                             app:layout_constraintEnd_toStartOf="@+id/img_feeds"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
@@ -144,7 +144,7 @@
                             android:layout_height="60dp"
                             android:background="@drawable/round_basic_button"
                             android:padding="10dp"
-                            android:src="@drawable/behavior"
+                            android:src="@drawable/contract"
                             app:layout_constraintEnd_toStartOf="@+id/img_health"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
