--- a/app/src/main/res/layout/encounter_list_item_view.xml
+++ b/app/src/main/res/layout/encounter_list_item_view.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="2dp"
+    android:layout_marginBottom="1dp"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
@@ -26,25 +26,16 @@
 
                 <TextView
                     android:id="@+id/tv_reference"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@drawable/bg_tv"
                     android:fontFamily="sans-serif-light"
                     android:gravity="center"
-                    android:paddingHorizontal="15dp"
-                    android:paddingVertical="7dp"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="2dp"
                     android:textColor="@color/white"
                     android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/tv_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_margin="10dp"
-                    android:fontFamily="sans-serif-light"
-                    android:textStyle="bold" />
             </RelativeLayout>
 
             <LinearLayout
@@ -83,17 +74,28 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="10dp"
-                android:paddingBottom="2dp">
+                android:layout_marginHorizontal="1dp"
+                android:paddingBottom="1dp">
 
+                <TextView
+                    android:id="@+id/tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginTop="@dimen/padding_10"
+                    android:layout_marginEnd="10dp"
+                    android:layout_toStartOf="@+id/img_arrow"
+                    android:fontFamily="sans-serif-light"
+                    android:textSize="12sp" />
 
                 <ImageView
-                    android:id="@+id/imgarrow"
+                    android:id="@+id/img_arrow"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_alignParentEnd="true"
-                    android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
+                    android:layout_marginEnd="@dimen/padding_16"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/bg_btn"
                     android:padding="4dp"
