--- a/app/src/main/res/layout/baby_item.xml
+++ b/app/src/main/res/layout/baby_item.xml
@@ -8,7 +8,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_weight="0.5"
         app:cardCornerRadius="6dp"
         app:cardElevation="2dp"
@@ -26,21 +26,20 @@
                 android:layout_height="55dp"
                 android:layout_marginTop="@dimen/spacing_mlarge"
                 android:layout_marginBottom="@dimen/spacing_mlarge"
-                app:srcCompat="@drawable/kid"
-               />
+                app:srcCompat="@drawable/kid" />
 
             <TextView
+                android:id="@+id/tv_baby_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_baby_name"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/colorPrimary" />
 
             <TextView
+                android:id="@+id/tv_mum_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_mother_name"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/colorPrimary" />
@@ -50,7 +49,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="0dp"
-        android:layout_height="150dp"
+        android:layout_height="wrap_content"
         android:layout_weight="1.5"
         app:cardCornerRadius="6dp"
         app:cardElevation="2dp"
@@ -204,7 +203,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/menu_apgar_score"
+                        android:id="@+id/app_apgar_score"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
