--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <include layout="@layout/baby_item" />
+        <include
+            android:id="@+id/inc_details"
+            layout="@layout/baby_item" />
 
         <LinearLayout
             android:layout_width="match_parent"
