--- a/app/src/main/res/layout/fragment_baby_feeds.xml
+++ b/app/src/main/res/layout/fragment_baby_feeds.xml
@@ -8,7 +8,10 @@
     android:padding="@dimen/_5dp"
     tools:context=".screens.dashboard.child.BabyFeedsFragment">
 
-    <include layout="@layout/baby_item" />
+    <include
+
+        android:id="@+id/inc_details"
+        layout="@layout/baby_item" />
 
     <LinearLayout
         android:layout_width="wrap_content"
