--- a/app/src/main/res/layout/fragment_baby_lactation.xml
+++ b/app/src/main/res/layout/fragment_baby_lactation.xml
@@ -9,7 +9,10 @@
 
     <include layout="@layout/mother_item" />
 
-    <include layout="@layout/baby_item" />
+    <include
+
+        android:id="@+id/inc_details"
+        layout="@layout/baby_item" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -49,10 +52,11 @@
                 android:text="@string/app_lactation_status"
                 android:textAppearance="@style/TextAppearance.AppCompat.Title"
                 android:textColor="@color/black" />
+
             <View
                 android:layout_width="match_parent"
-                android:background="@color/black"
-                android:layout_height="1dp"/>
+                android:layout_height="1dp"
+                android:background="@color/black" />
 
             <com.github.mikephil.charting.charts.BarChart
                 android:id="@+id/total_term_chart"
