--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="active">#50C2C9</color>
     <color name="dim_black">#514E4E</color>
     <color name="dim_red">#A8001E</color>
-    <color name="dim_green">#4CAF50</color>
+    <color name="dim_green">#24A047</color>
     <color name="inactive1">#94C4C4C4</color>
 
     <color name="gradient_start">#4CAF50</color>
