--- a/app/src/main/res/layout/mother_item.xml
+++ b/app/src/main/res/layout/mother_item.xml
@@ -41,7 +41,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/app_mother_name"
+               android:id="@+id/tv_mum_name"
                 android:textAlignment="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="@color/colorPrimary" />
@@ -205,7 +205,7 @@
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/menu_multiple"
+                        android:id="@+id/app_multiple_pregnancy"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content" />
                 </LinearLayout>
