--- a/app/src/main/res/layout/fragment_baby_dashboard.xml
+++ b/app/src/main/res/layout/fragment_baby_dashboard.xml
@@ -72,9 +72,9 @@
                         android:padding="@dimen/_5dp">
 
                         <TextView
+                            android:id="@+id/tv_current_weight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/action_dummy"
                             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body2"
                             android:textColor="@color/colorPrimary"
                             android:textSize="@dimen/_25sp" />
